new proj/src/objects/GE_SS_Daily_Log__c.object
<CustomObject>
    <fields>
        <fullName>GE_SS_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Daily Logs</relationshipLabel>
        <relationshipName>Daily_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Owner_Full_Name_OutDoc__c</fullName>
        <description>Formula field to combine first and last names for use in Output Documents.</description>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <label>Owner Full Name OutDoc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_SS_Type_of_Work__c</fullName>
        <label>Type of Work</label>
        <picklist>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolbox Talk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Shift Validation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Daily Logs</relationshipLabel>
        <relationshipName>Daily_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Daily Log</label>
    <nameField>
        <displayFormat>DL-{0000000}</displayFormat>
        <label>Daily Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>